--- a/Web/style.css
+++ b/Web/style.css
@@ -5,7 +5,6 @@ body {
 	background-image: url(https://github.com/Core2931/Project-PSIT-CO2/blob/Mark/Web/banner.jpg?raw=true);
 	background-repeat: no-repeat;
 	background-position: 0px 0px;
-	background-attachment : fixed
 }
 
 .box {
@@ -17,17 +16,17 @@ body {
 }
 
 .iconbar1{
-	margin: 30px 30px;
+	margin: 20px 20px;
 	font-size: 30px;
 }
 
 .iconbar2{
-	margin: 30px 30px;
+	margin: 20px 20px;
 	font-size: 30px;
 }
 
 .iconbar3{
-	margin: 30px 30px;
+	margin: 20px 20px;
 	font-size: 30px;
 }
 .bar1{
@@ -37,8 +36,8 @@ body {
 	padding: 20px;
 	background-color: #0066CC;
 	border-color: white;
-	border-left-width: 18px ;
-	border-right-width: 18px ;
+	border-left-width: 15px ;
+	border-right-width: 15px ;
 
 }
 .graph1{
@@ -46,5 +45,12 @@ body {
 	background-repeat: no-repeat;
 	font-size: 20px;
 	color: red;
-	
+
 }
+.para1{
+	font-size: 20px;
+}
+
+.imagebottom{
+	
+	}
