--- a/Web/style.css
+++ b/Web/style.css
@@ -38,6 +38,7 @@ body {
 	border-color: white;
 	border-left-width: 15px ;
 	border-right-width: 15px ;
+	border-radius: 0.5em;
 
 }
 .graph1{
@@ -52,5 +53,5 @@ body {
 }
 
 .imagebottom{
-	
+
 	}
